--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "test:e2e": "cypress run",
     "test:unit": "vitest",
-    "lint": "eslint . --fix && prettier . -w --check --log-level warn",
+    "lint": "eslint . --fix",
+    "format": "prettier . -w --check --log-level warn",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
