--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
     "ionicons": "^7.0.0",
+    "luxon": "^3.4.4",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
@@ -36,6 +37,7 @@
     "@storybook/test": "^7.6.10",
     "@storybook/vue3": "^7.6.10",
     "@storybook/vue3-vite": "^7.6.10",
+    "@types/luxon": "^3.4.2",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
