--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "paths": {
       "@/*": ["./src/*"],
     },
-    "allowJs": true
+    "allowJs": true,
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }],
